Correction for some text in the dispersion chapter of the manual.
The text 'are differentially defined' has been changed to 'are dually defined', as the word
differentially was incorrect.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -879,7 +879,7 @@ The equation for the exchange process for multiple quantum CPMG-type data is
                  \right] \right\},
 \end{equation}
 
-where $T$ is the constant time interval, and the matrices $\mathbf{A}$, $\mathbf{B}$, $\mathbf{C}$, and $\mathbf{D}$ are differentially defined.
+where $T$ is the constant time interval, and the matrices $\mathbf{A}$, $\mathbf{B}$, $\mathbf{C}$, and $\mathbf{D}$ are dually defined.
 When $n$ is even, they are defined as 
 \begin{subequations}
 \begin{align}
