--- a/docs/latex/data_model.tex
+++ b/docs/latex/data_model.tex
@@ -252,7 +252,7 @@ This will also load atomic position information into the matching spin container
 The \uf{spin\ufsep{}isotope} user function is required to define the magnetic dipole-dipole interaction and is information not present in the PDB file.
 
 Note that if structural data from the PDB is used to generate the spin containers, then all subsequent data loaded into relax must follow the exact naming convention from the PDB file.
-Automatic residue name matching (i.e. `GLY' = `Gly' = `gly' = `G') is currently not supported.
+Automatic residue name matching (i.e.\ `GLY' = `Gly' = `gly' = `G') is currently not supported.
 
 
 
