--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -528,7 +528,7 @@ More information about the IT99 model is available from:
 
 This is the model for 2-site very-slow exchange model for time scales within range of microsecond to second time scale, where $\pA \gg \pB$, and named after \citet{Tollinger01}.
 It is selected by setting the model to `TSMFK01'.
-A particularly interesting feature of the dispersion curves is the damped oscillations, which occur at low CPMG field strengths, and is solely a function of the chemical shift difference between the two sites (i.e., independent of the rate of exchange).
+A particularly interesting feature of the dispersion curves is the damped oscillations, which occur at low CPMG field strengths, and is solely a function of the chemical shift difference between the two sites (i.e.\ independent of the rate of exchange).
 
 The equation is:
 \begin{align}
