--- a/docs/latex/dispersion_params.tex
+++ b/docs/latex/dispersion_params.tex
@@ -42,9 +42,9 @@ $\omegaHA$         & -                              & The proton Larmor frequenc
 $\omegaHB$         & -                              & The proton Larmor frequency of the spin in state B (for MMQ data)             & rad.s$^{-1}$ \\
 $\omegaHC$         & -                              & The proton Larmor frequency of the spin in state C (for MMQ data)             & rad.s$^{-1}$ \\
 $\aveomega$        & $\pA\omegaA + \pB\omegaB$      & The population averaged Larmor frequency of the spin                          & rad.s$^{-1}$ \\
-$\omegaone$        & -                              & Spin-lock field strength, i.e. the amplitude of the rf field                  & rad.s$^{-1}$ \\
+$\omegaone$        & -                              & Spin-lock field strength, i.e.\ the amplitude of the rf field                 & rad.s$^{-1}$ \\
 $\omegae$          & $\sqrt{\aveoffset^2 + \omegaone^2}$  & Effective field in the rotating frame                                   & rad.s$^{-1}$ \\
-$\omegarf$         & -                              & Spin-lock offset, i.e. the frequency of the rf field                          & rad.s$^{-1}$ \\
+$\omegarf$         & -                              & Spin-lock offset, i.e.\ the frequency of the rf field                         & rad.s$^{-1}$ \\
 $\theta$           & $\arctan \left( \frac{\omegaone}{\aveoffset} \right)$  & Rotating frame tilt angle                             & rad \\
 $\kAB$             & $\pB\kex$                      & The forward exchange rate from state A to state B (2-site)                    & rad.s$^{-1}$ \\
 $\kBA$             & $\pA\kex$                      & The reverse exchange rate from state B to state A (2-site)                    & rad.s$^{-1}$ \\
