--- a/docs/latex/intro.tex
+++ b/docs/latex/intro.tex
@@ -402,7 +402,7 @@ From the listing the user functions\index{user functions} \uf{copy}, \uf{create\
 
 Within relax all user functions operate on data stored within the current data pipe.
 This pipe stores data is input, processed, or output as user functions are called.
-There are different types of data pipe for different analyses, e.g. a reduced spectral density mapping pipe, a model-free pipe, an exponential curve-fitting pipe, etc.
+There are different types of data pipe for different analyses, e.g.\ a reduced spectral density mapping pipe, a model-free pipe, an exponential curve-fitting pipe, etc.
 Multiple data pipes can be created within relax and various operations performed in sequence on these pipes.
 This is useful for operations such as model selection whereby the function \uf{model\ufus{}selection} can operate on a number of pipes corresponding to different models and then assign the results to a newly created pipe.
 When running relax you choose which pipe you are currently in by using the \uf{pipe\ufsep{}switch} user function to jump between pipes.
