--- a/docs/latex/consistency_tests.tex
+++ b/docs/latex/consistency_tests.tex
@@ -13,13 +13,13 @@
 In spin relaxation, datasets are often recorded at different magnetic fields.
 This is especially important when $\Rtwo$ values are to be used since $\mu$s-ms motions contribute to $\Rtwo$.
 This contribution being scaled quadratically with the strength of the magnetic field, recording at multiple magnetic fields helps extract it.
-Also, acquiring data at multiple magnetic fields allows over-determination of the mathematical problems, e.g. in the model-free approach.
+Also, acquiring data at multiple magnetic fields allows over-determination of the mathematical problems, e.g.\ in the model-free approach.
 
 Recording at multiple magnetic fields is a good practice.
 However, it can cause artifacts if those different datasets are inconsistent.
 Inconsistencies can originate from, inter alia, the sample or the acquisition.
 Sample variations can be linked to changes in temperature, concentration, pH, etc.
-Water suppression is the main cause of acquisition variations as it affect relaxation parameters (especially NOE) of exposed and exchangeable moieties (e.g. the NH moiety).
+Water suppression is the main cause of acquisition variations as it affect relaxation parameters (especially NOE) of exposed and exchangeable moieties (e.g.\ the NH moiety).
 
 It is thus a good idea to assess consistency of datasets acquired at different magnetic fields.
 For this purpose, three tests are implemented in relax.
