--- a/docs/latex/develop.tex
+++ b/docs/latex/develop.tex
@@ -140,7 +140,7 @@ This mark up language is important for the creation of the \href{http://www.nmr-
 % Variable, function, and class names.
 \subsection{Variable, function, and class names}
 
-In relax a mixture of both camel case (e.g. CamelCase)\index{camel case} and lower case with underscores is used.
+In relax a mixture of both camel case (e.g.\ CamelCase)\index{camel case} and lower case with underscores is used.
 Despite the variability there are fixed rules which should be adhered to.
 These naming conventions should be observed at all times.
 
@@ -827,7 +827,7 @@ That way the thread will be continuous -- there will not be any messages missing
 To simplify the process of checking if the message was supposed to be private, you could copy-and-paste the following message (modifying it as you see fit):
 
 \begin{exampleenv}
-Sorry in advance, but the following is the standard pre-composed response to a post not sent to the relax mailing lists and not labelled as private.  If you would like to start a private conversation about relax, please label your message as such.  If you really must start a private exchange, please respond to this message saying so.  If your message was meant to be sent to the relax mailing list, please send the message again.  For this, please copy-and-paste your message, replying to the original (i.e. no forwarding), and making sure that the mailing list is in the CC field by clicking on ``reply-to-all''.
+Sorry in advance, but the following is the standard pre-composed response to a post not sent to the relax mailing lists and not labelled as private.  If you would like to start a private conversation about relax, please label your message as such.  If you really must start a private exchange, please respond to this message saying so.  If your message was meant to be sent to the relax mailing list, please send the message again.  For this, please copy-and-paste your message, replying to the original (i.e.\ no forwarding), and making sure that the mailing list is in the CC field by clicking on ``reply-to-all''.
 \end{exampleenv}
 
 
